omnitron-rpc/tests/compile_fail/serde1/deprecated.rs
#![deny(warnings)]

#[omnitron_rpc::service(derive_serde = true)]
trait Foo {
    async fn foo();
}

fn main() {}
